--- a/jobmon/components/joblist/JobList.module.css
+++ b/jobmon/components/joblist/JobList.module.css
@@ -5,7 +5,7 @@
   margin: auto;
 }
 
-.list text {
+.list div {
   /* width: 20%; */
   text-align: center;
 }
@@ -20,16 +20,16 @@
   background-color: #0000000d;
 }
 
-.listItem text,
-.listHeader text {
+.listItem div,
+.listHeader div {
   width: 100%;
   flex-grow: 1;
   text-align: center;
   border-right: 1px solid black;
 }
 
-.listHeader text:last-child,
-.listItem text:last-child {
+.listHeader div:last-child,
+.listItem div:last-child {
   border-right: 0px;
 }
 
